                              Add How to documents to use accessible tabs
   
   19 Dec 2018    'clear accessible-tabs css'
                              Not use html elements ins selector, when class is given.
                              Also make compressed accessible-tab css (sliding-doors.css and sliding-doors.originals.css)
                                                
   22 Dec 2018    'class-autoloader handle namespaces'
                              You can assign namespaces to inlcude dir (namspace => dir) to avoid conflicts of the same names
                              If you specify the namespace, that class will be searched only in the given dir.
   
   2 Jan 2019     'correct manduca init'
                              Correct classloader parameters in function.php according to the class-looader modifications in prev. commit.
                              
   3 Jan 2019     'link function enhancement'
                              utf-8 for link manipulation, some documentation.
                              
   14 Jan 2019    'fix title filter'
                              Page number was missing from the title of paged archives etc. Fixed.
                              
   17 Jan 2019    'fix Guttenberg issue'
                              Using Guttenberg generates errors because svg handler.
                              So far only the frontend applied it, ant this was not a problem
                              
   18 Jan 2019    'date difference in Hungarian'
                              The date difference WP function in Hungarien language was unusable.
                              I made the function in Hungarian_Contents class.

   18 Jan, 2018   'link aria-label changes'
                              Based on user feedbacks: external, open in new window and Google map indicators in aria-label
                              put in brackets,
                              + all indicators included in bracket. 